# Stock-Project

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
src/ironman_project/: __init__.py
tests/: test_ironman_project.py
